Resolve menu not showing

--- a/home.css
+++ b/home.css
@@ -132,7 +132,6 @@ html {
 
 /* CSS for smooth transition */
 #menuLinks {
-    display: none;
     overflow: hidden;
     transition: height 0.3s ease;
 }
